# docx-generator-skill

./: .gitignore  AGENTS.md  ARCHITECTURE_FLOW.md  EXAMPLES.md  IMPLEMENTATION_REPORT.md  QUICKSTART.md  README.md  SETUP_GUIDE.md  SKILL.md  examples.py  index.html  package.json  pyproject.toml  requirements.txt  start.sh  test_docx_generator.py
.codex/skills/generate-docx/: SKILL.md
.codex/skills/generate-docx/agents/: openai.yaml
.codex/skills/generate-docx/scripts/: package-lock.json
skills/generate-docx/: README.md  SKILL.md  generate-docx.js  package.json
src/docx_generator/: __init__.py
wheels/: docx_generator-1.0.0-py3-none-any.whl
