[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docx-generator"
version = "1.0.0"
description = "Browser-based Word document generator — converts HTML/Markdown to professional .docx files with complex layouts"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
  {name = "Hermes Agent / rajivmehtaflex"}
]
keywords = ["docx", "word", "document", "generator", "markdown", "html", "pyscript", "wasm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Office Suites",
  "Topic :: Text Processing :: Markup :: HTML",
  "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
  "python-docx>=1.1.0",
  "markdown2>=2.4.0",
  "beautifulsoup4>=4.12.0",
]

[project.urls]
Homepage = "https://github.com/rajivmehtaflex/docx-generator-skill"
Repository = "https://github.com/rajivmehtaflex/docx-generator-skill"
Documentation = "https://github.com/rajivmehtaflex/docx-generator-skill#readme"

[tool.setuptools.packages.find]
where = ["src"]
include = ["docx_generator*"]
